[project]
name = "markup-document-converter"
version = "0.1.0"
description = ""
authors = [
    {name = "pwalecki",email = "01178613@pw.edu.pl"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]

[tool.poetry]
packages = [{include = "markup_document_converter", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
